--- a/page/tabBar/homePages/seeTeam/seeTeam.wxml
+++ b/page/tabBar/homePages/seeTeam/seeTeam.wxml
@@ -38,10 +38,10 @@
 
    <!-- list -->
   <view wx:else class='content bg_fff'>
-    <view bindtap='listTap' class='com_width list_box'>
+    <view class='com_width list_box'>
       <view class='list'>
         <text class='list_title'>姓名:</text>
-        <text class='list_data'>李先生111</text>
+        <text class='list_data'>李先生</text>
       </view>
 
       <view class='list'>
