--- a/page/tabBar/homePages/wageBlockDetails/wageBlockDetails.wxml
+++ b/page/tabBar/homePages/wageBlockDetails/wageBlockDetails.wxml
@@ -28,7 +28,7 @@
   <!-- 工资明细 -->
   <view class='com_width wage_deta'>工资明细</view>
   <!-- 表格 -->
-  <view>
+  <view bindtap='goWageDetails'>
     <view class='com_tab_title tab_title'>
       <view>年月</view>
       <view>应发(元)</view>
