完善select，添加vip权限

--- a/page/tabBar/homePages/seeWage/seeWage.wxss
+++ b/page/tabBar/homePages/seeWage/seeWage.wxss
@@ -20,8 +20,22 @@
 }
 .select_header>view{
   padding: 25rpx 30rpx;
+  display: flex;
+  align-items: center;
 }
-
+.tan{
+  width: 30rpx;
+  height: 30rpx;
+  margin-left: 6rpx;
+}
+.tan_top{
+  width: 25rpx;
+  height: 25rpx;
+  margin-left: 6rpx;
+}
+.add_class{
+  color: #2f8ce0;
+}
 /* content */
 .content{
   margin-top: 24rpx;
