--- a/page/tabBar/home/home.wxss
+++ b/page/tabBar/home/home.wxss
@@ -80,16 +80,19 @@
   align-items: center;
   padding-left: 20rpx;
 }
+.itemIcon{
+  position: relative;
+}
 .message-count{
   display: flex;
   justify-content:center;
   align-items: center;
   position:absolute;
-  top:60px;
-  left: 85px;
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
+  top:-13rpx;
+  right: -13rpx;
+  width: 32rpx;
+  height: 32rpx;
+  border-radius: 50%;
   background-color: red;
   color: white;
   font-size: 24rpx;
