--- a/page/tabBar/mine/mine.wxml
+++ b/page/tabBar/mine/mine.wxml
@@ -1,2 +1,84 @@
+<view wx:if="{{!blockIsShow}}" class='box'>
+  <!-- header -->
+  <view class='border_top bg_fff box_shadow'>
+    <view class='display_flex com_width headers'>
+      <image src='/image/none_record.png'></image>
+      <view>
+        <view class='user_name'>木木</view>
+        <view class='user_msg display_flex'>
+          <text class='color_gray'>当前所在项目：</text>
+          <text>某个项目</text>
+          <view class='add_class tab_btn'>切换</view>
+        </view>
+      </view>
+    </view>
+   
+  </view>
+  <!-- 实名认证 -->
+  <view class='bg_fff margin_top' bindtap='goAuthentication'>
+   
+    <view class='display_flex com_list certification'>
+      <image class='sm_icon' src='/image/icon_home_HL.png'></image>
+      <view class='com_list_right display_flex border_none'>
+        <text>实名认证</text>
+        <view class='color_red'>为了确保什么事什么的赶快实名认证</view>
+        <image class='com_right' src="/image/right_j.png"></image>
+      </view> 
+    </view>
+  </view>
+  <!-- list -->
+  <view class='bg_fff margin_top '>  
+    <view class='display_flex com_list'>
+      <image class='sm_icon' src='/image/icon_home_HL.png'></image>
+      <view class='com_list_right display_flex'>
+        <text>紧急联系人</text>
+        <image class='com_right' src="/image/right_j.png"></image>
+      </view> 
+    </view>
 
-<text>我的</text>
+    <view class='display_flex com_list'>
+      <image class='sm_icon' src='/image/icon_home_HL.png'></image>
+      <view class='com_list_right display_flex'>
+        <text>个人奖惩</text>
+        <image class='com_right' src="/image/right_j.png"></image>
+      </view> 
+    </view>
+
+    <view class='display_flex com_list' bindtap='goMyProject'>
+      <image class='sm_icon' src='/image/icon_home_HL.png'></image>
+      <view class='com_list_right display_flex'>
+        <text>我的项目</text>
+        <image class='com_right' src="/image/right_j.png"></image>
+      </view> 
+    </view>
+
+    <view class='display_flex com_list' bindtap='goPersonData'>
+      <image class='sm_icon' src='/image/icon_home_HL.png'></image>
+      <view class='com_list_right display_flex'>
+        <text>个人资料</text>
+        <image class='com_right' src="/image/right_j.png"></image>
+      </view> 
+    </view>
+    <view class='display_flex com_list'>
+      <image class='sm_icon' src='/image/icon_home_HL.png'></image>
+      <view class='com_list_right display_flex border_none'>
+        <text>信息反馈</text>
+        <image class='com_right' src="/image/right_j.png"></image>
+      </view> 
+    </view>
+  </view>
+  <!-- 退出 -->
+  <view class='out bg_fff'>退出</view>
+</view>
+
+<!-- 实名认证浮层 -->
+<view wx:else class='box_block'>
+  <view class='bg_fff block_view'>
+    <view class='block_title'>您未实名认证！</view>
+    <view class="block_content color_gray">
+      只能看招聘信息,点击进行<text class='add_class'>实名认证></text>
+    </view>
+    <view class='later_on add_class'>稍后认证</view> 
+  </view>
+</view>
+  
