--- a/page/tabBar/home/home.wxml
+++ b/page/tabBar/home/home.wxml
@@ -7,7 +7,7 @@
         <text class="title-ico fa fa-hourglass-2"></text>
         <text class='titleFont'>待办</text></view>   
       </view>
-    <view class='pendingitems'>
+    <view class='pendingitems' bindtap='goNews'>
       <view class="pendingitem">
         <view class="itemIcon">
           <text class="own-ico fa fa-commenting"></text> 
