--- a/page/tabBar/minePages/authentication/authentication.wxml
+++ b/page/tabBar/minePages/authentication/authentication.wxml
@@ -1,19 +1,18 @@
 <view class='box'>
   <view class='margin_top header bg_fff'>
-    <view class='com_title com_width'>上传个人照片</view>
+    <view class='com_title com_width'>上传本人头像</view>
     <view class='photo_view padding_bottom display_flex com_width'>
       <view class='add_view'>
         <image src='/image/add_icon.png'></image>
-        <view class='color_gray'>点击上传个人照片</view>
+        <view class='color_gray'>点击拍照上传头像</view>
       </view>
-      <view class='color_gray photo_msg'>
-        <view>注：个人请上传证件照片</view>
-        <view>仅支持jpg/jpeg/png格式的照片，图片最大为2M</view>
+      <view class='photo_msg'>
+        <view>注：采集人像供考勤机智能识别，为了你的正常考勤，请拍摄自己的头像上传。</view>
       </view>
     </view> 
   </view>
   <view class='content bg_fff margin_top'>
-    <view class='com_title com_width'>上传个人照片</view>
+    <view class='com_title com_width'>上传证件照</view>
     <view class='photo_view display_flex com_width'>
       <view class='add_view'>
         <image src='/image/add_icon.png'></image>
