--- a/page/tabBar/homePages/vipBlock/vipBlock.wxss
+++ b/page/tabBar/homePages/vipBlock/vipBlock.wxss
@@ -66,7 +66,10 @@
   margin-left: 6%;
 }
 
-/* content */
+/* 工资 */
+.wage_block{
+  /* box-shadow:0 0 8rpx 0 #4E4E4E;  */
+}
 .content{
   margin-top: 24rpx;
   padding: 20rpx 0 20rpx 0;
@@ -74,6 +77,7 @@
 }
 .list{
   padding: 10rpx 0; 
+  font-size: 28rpx;
 }
 .list_title{
   color: #666666;
@@ -83,10 +87,16 @@
 }
 .see_list{
   position: absolute;
-  padding: 10rpx 20rpx;
+  padding: 6rpx 20rpx;
   border: 1rpx solid #2f8ce0;
   color: #2f8ce0;
   border-radius: 8rpx;
   right: 5%;
-  bottom: 10%;
+  bottom: 28rpx;
+  font-size: 28rpx;
+}
+/* 考勤 */
+.attendance_block_title{
+  font-size: 34rpx;
+  font-weight: 400;
 }
